<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DecryptionActivity">

    <TextView
        android:id="@+id/tv_encryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/encryption"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_message_body"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_message_body"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_decryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/decryption"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/et_message_body"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/et_message_body"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_message_body"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rectangle"
        android:ems="160"
        android:gravity="top"
        android:hint="@string/write_your_text_here"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="16sp"
        android:padding="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_encryption"
        app:layout_constraintWidth_percent="0.90" />

    <Button
        android:id="@+id/btn_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/decrypt"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/et_message_body"
        app:layout_constraintStart_toStartOf="@+id/et_message_body"
        app:layout_constraintTop_toBottomOf="@+id/et_message_body" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="54dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_message_body"
        app:layout_constraintStart_toStartOf="@+id/et_message_body"
        app:layout_constraintTop_toBottomOf="@+id/btn_decrypt" />

</androidx.constraintlayout.widget.ConstraintLayout>